feat: :sparkles: Se agrea al proyecto jwt

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MY_CONFIG={"hostname":"127.10.10.10", "port":5100}
-MY_CONNECT={"host":"localhost","user":"root","password":"","database":"db_tactical", "port":3306}
+MY_CONNECT={"host":"localhost","user":"campus","password":"campus2023","database":"db_tactical", "port":3306}
+PASSWORD="Nicolas123456789"
